ECOSCOM-5578 - Add workspace support for dashboard